# seamless-world

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  无缝大地图-场景构建.pptx  无缝大地图-总体架构.pptx
Seamless/: .gitignore  README.md  seamless.code-workspace
Seamless/protoFile/: g.bat  game.proto  gen.py  route
Seamless/server/: ImportCdkey.sh  build.bat  build_client_debug.bat  build_debug.bat  publish.sh  second.sh  start.bat  start.sh  start_cellapp.bat  start_cellappmgr.bat  start_client1.bat  start_client2.bat  start_gateway.bat  start_lobby.bat  start_login.bat  start_match.bat  start_room.bat  start_seamless.bat  stop.sh  verpublish.sh  verpublish_test.sh
Seamless/server/.vscode.example/: launch.json  settings.json
Seamless/server/doc/: README.md  快速开始 - 大纲.md
Seamless/server/sql/: careerdata.sql  (+1 more)
Seamless/zeus/: build.bat  build.sh
Seamless/zeus/src/unity_physx/: CMakeLists.txt  PhyisXSceneTest.sln  PhyisXSceneTest.vcxproj  PhyisXSceneTest.vcxproj.filters  UnityPxAPI.cpp  UnityPxBoxCollider.cpp  UnityPxBoxCollider.h  UnityPxCapsuleCollider.cpp  UnityPxCapsuleCollider.h  UnityPxMesh.cpp  UnityPxMesh.h  UnityPxMeshCollider.cpp  UnityPxMeshCollider.h  UnityPxObject.cpp  UnityPxObject.h  UnityPxSDK.cpp  UnityPxSDK.h  UnityPxScene.cpp  UnityPxScene.h  UnityPxTerrainCollider.cpp  UnityPxTerrainCollider.h  main.cpp
Seamless/zeus/src/unity_physx/doc/: ServerData_PhysXScene.cs  readme.md
Seamless/zeus/src/unity_physx/unitypx/: unitypx.vcxproj  unitypx.vcxproj.filters
Seamless/zeus/src/unity_physx/unitypx_test/: main.cpp  unitypx_test.vcxproj
(+557 files in other folders)
